Added title below

--- a/src/app/components/main.html
+++ b/src/app/components/main.html
@@ -21,6 +21,8 @@
       Next
     </button>
   </div>
-  <div class="g-col-4"></div>
+  <div class="g-col-4">
+    <h1>Hello World!</h1>
+  </div>
 </div>
 
